1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javaswarm: Print out LD_LIBRARY_PATH additions if there are no
	arguments (otherwise export and run java).

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javaswarm: Use \012 instead of \n to avoid problems with ucb tr.

	* java-stub.el (java-print-native-class): Use method-list instead
	of protocol-method-list.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (C_EXTRA_DIST): Add JavaProxy and SwarmEnvironment.
	
	* javaswarm: New file.

	* Makefile.am (bin_SCRIPTS): Install it.

	* java-stub.el (java-print-method-invocation): New function.
	(java-print-native-method): Use it.  Handle +createBegin: and
	-createEnd.

1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-method, java-print-native-method):
	Print "$" between method keys (instead of mixing case).
	(java-argument-print-conversion): Handle selectors. 
	(*removed-methods*): Remove the parameter SEL exceptions.
	(java-print-native-class): Don't declare jniEnv extern.
	(java-print-native-method, java-argument-print-conversion): Refer
	to env stub parameter, not jniEnv extern.

	* Makefile.am (SWARM_EXTRA_DIST): Add swarm/Selector.java.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*): Convert timeval_t and
	size_t to long and Color to byte.
	(*removed-protocols*, *removed-methods*): New lists.
	(method-ellipsis-p): New function.
	(removed-method-p): Use it and *removed-methods*.
	(removed-protocol-p): New function.
	(included-protocol-list): Use it instead of just
	the-CREATABLE-protocol-p.
	(java-type-to-native-type): Handle java.lang.reflect.Method.
	(java-argument-print-conversion): Handle jmethodID.
	(java-print-makefiles, java-print-classes): Use removed-protocol-p
	instead of the-CREATABLE-protocol-p.

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
